# drozoSearch

./: Cargo.toml  README.md  bundle-macos.sh
.github/workflows/: release.yml
assets/: icon.icns
src/: app.rs  config.rs  main.rs  types.rs
src/index/: mod.rs  reader.rs  schema.rs  writer.rs
src/indexer/: content.rs  coordinator.rs  metadata.rs  mod.rs  walker.rs
